@@ -1,5 +1,6 @@
 0.2.0
  - feat: support bmlab session file format (#18)
+ - enh: prevent users from loading the same file twice
 0.1.2
  - fix: color of shapes in colocalize view not updated when changed
    in collect view
